--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,19 +1,3 @@
-- date: 10 February 2022
-  title: Event with both abstract and URL
-  author: Erik
-  url: https://en.wikipedia.org/wiki/Abstract_(summary)
-  abstract: This entry has both a URL link and an abstract.
-
-- date: 9 February 2022
-  title: Event with abstract but no URL
-  author: Erik
-  abstract: "This entry has an abstract and but it doesn't have a URL, so the title isn't converted to a link."
-
-- date: 8 February 2022
-  title: Event with URL and no abstract
-  author: Erik
-  url: https://en.wikipedia.org/wiki/URL
-
-- date: 7 February 2022
-  title: Event with no URL or abstract
-  author: Erik
+- date: 14 February 2022
+  title: Symmetries of the NPA hierarchy
+  author: Denis Rosset and Marie Ioannou
