correct pics filenames

--- a/_data/home_slider.yml
+++ b/_data/home_slider.yml
@@ -1,7 +1,7 @@
 - name: pmentv2.png
 
-- name: lens.pg
+- name: lens.pg.png
 
-- name: randomness
+- name: randomness.png
 
-- name: reservoir
+- name: reservoir.png
