minor edit to members

--- a/_data/team_phd.yml
+++ b/_data/team_phd.yml
@@ -13,7 +13,7 @@
 
 - name: Michele Masini
   photo: michele.jpg
-  info: PhD student
+  info: PhD student since 2020
   identifier: michele.masini
   arxiv: masini_m_1
   scholar: I1MBODYAAAAJ
@@ -27,7 +27,7 @@
 
 - name: Jef Pauwels
   photo: brad.jpg
-  info: PhD student
+  info: PhD student since 2019
   identifier: jef.pauwels
 
 - name: Enrico Picco
