--- a/_data/team_postdoc.yml
+++ b/_data/team_postdoc.yml
@@ -1,6 +1,6 @@
 - name: Erik Woodhead
   photo: erik.jpg
-  info: Postdoc
+  info: Postdoc since 2019
   identifier: erik.woodhead
   arxiv: woodhead_e_1
   scholar: 7eZJbT8AAAAJ
