--- a/_data/team_phd.yml
+++ b/_data/team_phd.yml
@@ -7,6 +7,7 @@
   photo: alessandro.jpg
   info: PhD student
   identifier: alessandro.lupo
+  arxiv: 0000-0002-5541-7140
   scholar: N6OeIBIAAAAJ
   linkedin: alessandro-lupo
   orcid: 0000-0002-5541-7140
