--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,9 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
+
+plugins: ['jekyll/scholar']
+
 title: The Allan Lab
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
@@ -31,6 +34,7 @@ incremental: false
 
 
 
+
 # Markdown Processing
 kramdown:
   input: GFM
@@ -43,3 +47,16 @@ kramdown:
   enable_coderay: false
   parse_block_html: true # default for kramdown is false. This will enable using Markdown links
 
+
+
+# Scholar
+scholar:
+  style: apa
+  locale: en
+  source: ./_bibliography/
+  bibliography: '*.bib'  
+  sort_by: year,month
+  order: descending
+  group_by: year
+  group_order: descending
+  remove_duplicates: true
