add info for Jef

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -68,6 +68,8 @@
   role: phd
   info: PhD student since 2019
   identifier: jef.pauwels
+  arxiv: pauwels_j_1
+  orcid: 0000-0003-4440-7411
 
 - name: Enrico Picco
   photo: enrico.jpg
