--- a/_config.yml
+++ b/_config.yml
@@ -50,9 +50,9 @@ kramdown:
 
 # Scholar
 scholar:
-  style: apa
+  style: assets/bibliography/aps-custom.csl
   locale: en
-  source: ./_bibliography/
+  source: _bibliography/
   bibliography: '*.bib'
   sort_by: year, month
   order: descending
