--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,10 @@
 
 plugins: ['jekyll/scholar']
 
-title: The Allan Lab
-email: your-email@domain.com
+title: Laboratoire d'Information Quantique
+email:
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Website of the Laboratoire d'Information Quantique at ULB.
 baseurl: ""
 url: ""
 
