--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ title: Laboratoire d'Information Quantique
 email:
 description: > # this means to ignore newlines until "baseurl:"
   Website of the Laboratoire d'Information Quantique at ULB.
-baseurl: ""
-url: ""
+baseurl: "/_site"
+url: "https://liq-ulb.github.io"
 
 include:
   - .htaccess
