add picture for Jef

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -64,7 +64,7 @@
   identifier: romain.morleghem
 
 - name: Jef Pauwels
-  photo: brad.jpg
+  photo: jef.jpg
   role: phd
   info: PhD student since 2019
   identifier: jef.pauwels
