change publication topic titles

--- a/_data/pubtopics.yml
+++ b/_data/pubtopics.yml
@@ -1,8 +1,8 @@
 - title: Quantum information
   class: quant-ph
 
-- title: Optics
+- title: Quantum and nonlinear optics
   class: physics.optics
 
-- title: Boi-inspired computing/other topics
+- title: Neuromorphic computing and other topics
   class: cs.
