add linkedin for Enrico

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -76,6 +76,7 @@
   role: phd
   info: PhD student
   identifier: enrico.picco
+  linkedin: enrico-picco
 
 - name: Samara Hussain
   photo: samara.jpg
