additions for Serge

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -12,6 +12,7 @@
   info: Professor
   page: serge_massar
   identifier: serge.massar
+  scholar: kBKu5jwAAAAJ
 
 - name: Stefano Pironio
   photo: stefano.jpg
