update members page

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -79,7 +79,7 @@
   identifier: enrico.picco
   linkedin: enrico-picco
 
-- name: Samara Hussain
-  photo: samara.jpg
+- name: Catherine Buess
+  photo: catherine.jpg
   role: admin
-  identifier: samara.hussain
+  identifier: catherine.buess
